Update video-call component

--- a/src/app/components/video-call/video-call.component.html
+++ b/src/app/components/video-call/video-call.component.html
@@ -1,8 +1,82 @@
 <div class="w-full flex flex-col md:flex-row items-center justify-content-beetwen">
-    <div class="w-full aspect-[4/3] bg-gray-800">
-        <video #remoteVideo class="w-full -scale-x-100" autoplay></video>
+    <div class="w-full aspect-[4/3] bg-black relative flex items-center justify-center">
+        <video #remoteVideo class="w-full -scale-x-100" autoplay playsInline></video>
+        @if (!isStartedInput()) {
+            <div class="absolute">
+                <img src="nattv.png" alt="logo" width="70%" height="70%">
+            </div>
+        } @else if (!remoteStreamInput()) {
+            <div class="absolute top-0 left-1">
+                <img src="nattv64x64.png" alt="logo" width="64" height="64">
+            </div>
+            <span class="absolute">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" width="150" height="150" style="shape-rendering: auto; display: block; background: rgba(255, 255, 255, 0);" xmlns:xlink="http://www.w3.org/1999/xlink"><g><circle r="20" fill="#e90c59" cy="50" cx="30">
+                    <animate begin="-0.5s" values="30;70;30" keyTimes="0;0.5;1" dur="1s" repeatCount="indefinite" attributeName="cx"></animate>
+                  </circle>
+                  <circle r="20" fill="#46dff0" cy="50" cx="70">
+                    <animate begin="0s" values="30;70;30" keyTimes="0;0.5;1" dur="1s" repeatCount="indefinite" attributeName="cx"></animate>
+                  </circle>
+                  <circle r="20" fill="#e90c59" cy="50" cx="30">
+                    <animate begin="-0.5s" values="30;70;30" keyTimes="0;0.5;1" dur="1s" repeatCount="indefinite" attributeName="cx"></animate>
+                    <animate repeatCount="indefinite" dur="1s" keyTimes="0;0.499;0.5;1" calcMode="discrete" values="0;0;1;1" attributeName="fill-opacity"></animate>
+                  </circle><g></g></g></svg>
+            </span>
+        }
     </div>
-    <div class="w-full aspect-[4/3] bg-gray-800">
-        <video #localVideo class="w-full -scale-x-100" autoplay muted></video>
+    <div class="w-full aspect-[4/3] bg-black relative flex items-center justify-center">
+        <video #localVideo class="w-full -scale-x-100" autoplay playsInline muted></video>
+        @if (!localStreamInput()) {
+            <span class="absolute">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" width="200" height="200" style="shape-rendering: auto; display: block; background: rgba(255, 255, 255, 0);" xmlns:xlink="http://www.w3.org/1999/xlink"><g><g transform="rotate(0 50 50)">
+                    <rect fill="#fe718d" height="12" width="6" ry="6" rx="3" y="24" x="47">
+                      <animate repeatCount="indefinite" begin="-0.9166666666666666s" dur="1s" keyTimes="0;1" values="1;0" attributeName="opacity"></animate>
+                    </rect>
+                  </g><g transform="rotate(30 50 50)">
+                    <rect fill="#fe718d" height="12" width="6" ry="6" rx="3" y="24" x="47">
+                      <animate repeatCount="indefinite" begin="-0.8333333333333334s" dur="1s" keyTimes="0;1" values="1;0" attributeName="opacity"></animate>
+                    </rect>
+                  </g><g transform="rotate(60 50 50)">
+                    <rect fill="#fe718d" height="12" width="6" ry="6" rx="3" y="24" x="47">
+                      <animate repeatCount="indefinite" begin="-0.75s" dur="1s" keyTimes="0;1" values="1;0" attributeName="opacity"></animate>
+                    </rect>
+                  </g><g transform="rotate(90 50 50)">
+                    <rect fill="#fe718d" height="12" width="6" ry="6" rx="3" y="24" x="47">
+                      <animate repeatCount="indefinite" begin="-0.6666666666666666s" dur="1s" keyTimes="0;1" values="1;0" attributeName="opacity"></animate>
+                    </rect>
+                  </g><g transform="rotate(120 50 50)">
+                    <rect fill="#fe718d" height="12" width="6" ry="6" rx="3" y="24" x="47">
+                      <animate repeatCount="indefinite" begin="-0.5833333333333334s" dur="1s" keyTimes="0;1" values="1;0" attributeName="opacity"></animate>
+                    </rect>
+                  </g><g transform="rotate(150 50 50)">
+                    <rect fill="#fe718d" height="12" width="6" ry="6" rx="3" y="24" x="47">
+                      <animate repeatCount="indefinite" begin="-0.5s" dur="1s" keyTimes="0;1" values="1;0" attributeName="opacity"></animate>
+                    </rect>
+                  </g><g transform="rotate(180 50 50)">
+                    <rect fill="#fe718d" height="12" width="6" ry="6" rx="3" y="24" x="47">
+                      <animate repeatCount="indefinite" begin="-0.4166666666666667s" dur="1s" keyTimes="0;1" values="1;0" attributeName="opacity"></animate>
+                    </rect>
+                  </g><g transform="rotate(210 50 50)">
+                    <rect fill="#fe718d" height="12" width="6" ry="6" rx="3" y="24" x="47">
+                      <animate repeatCount="indefinite" begin="-0.3333333333333333s" dur="1s" keyTimes="0;1" values="1;0" attributeName="opacity"></animate>
+                    </rect>
+                  </g><g transform="rotate(240 50 50)">
+                    <rect fill="#fe718d" height="12" width="6" ry="6" rx="3" y="24" x="47">
+                      <animate repeatCount="indefinite" begin="-0.25s" dur="1s" keyTimes="0;1" values="1;0" attributeName="opacity"></animate>
+                    </rect>
+                  </g><g transform="rotate(270 50 50)">
+                    <rect fill="#fe718d" height="12" width="6" ry="6" rx="3" y="24" x="47">
+                      <animate repeatCount="indefinite" begin="-0.16666666666666666s" dur="1s" keyTimes="0;1" values="1;0" attributeName="opacity"></animate>
+                    </rect>
+                  </g><g transform="rotate(300 50 50)">
+                    <rect fill="#fe718d" height="12" width="6" ry="6" rx="3" y="24" x="47">
+                      <animate repeatCount="indefinite" begin="-0.08333333333333333s" dur="1s" keyTimes="0;1" values="1;0" attributeName="opacity"></animate>
+                    </rect>
+                  </g><g transform="rotate(330 50 50)">
+                    <rect fill="#fe718d" height="12" width="6" ry="6" rx="3" y="24" x="47">
+                      <animate repeatCount="indefinite" begin="0s" dur="1s" keyTimes="0;1" values="1;0" attributeName="opacity"></animate>
+                    </rect>
+                  </g><g></g></g><!-- [ldio] generated by https://loading.io --></svg>
+            </span>
+        }
     </div>
 </div>
